--- a/AV/Development/DijkstraPE-research-v3.html
+++ b/AV/Development/DijkstraPE-research-v3.html
@@ -46,6 +46,7 @@
     <script src="graphUtils.js"></script>
     <script src="../../lib/jsav-exercise-recorder-bundle.js"></script>
     <script src="PqOperationSequence.js"></script>
+    <script src="DijkstraInstanceGenerator.js"></script>
     <script src="DijkstraPE-research-v3.js"></script>
   </body>
 </html>
