--- a/AV/Development/DijkstraPE-research-v3.html
+++ b/AV/Development/DijkstraPE-research-v3.html
@@ -3,6 +3,7 @@
   <head>
     <title>Dijkstra's Algorithm Proficiency Exercise</title>
     <meta charset="utf-8" />
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
@@ -45,6 +46,7 @@
     <script src="graphUtils.js"></script>
     <script src="../../lib/jsav-exercise-recorder-bundle.js"></script>
     <script src="PqOperationSequence.js"></script>
+    <script src="DijkstraInstanceGenerator-ugly.js"></script>
     <script src="DijkstraPE-research-v3.js"></script>
   </body>
 </html>
