Non-Sc.Dijkstra: uglify generation
Fulfill issue #205

--- a/AV/Development/DijkstraPE-research.html
+++ b/AV/Development/DijkstraPE-research.html
@@ -50,6 +50,7 @@
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="graphUtils.js"></script>
+    <script src="DijkstraPE-research-generator-ugly.js"></script>
     <script src="../../lib/jsav-exercise-recorder-bundle.js"></script>
     <script src="DijkstraPE-research.js"></script>
   </body>
