--- a/AV/Development/DijkstraPE-research.html
+++ b/AV/Development/DijkstraPE-research.html
@@ -3,6 +3,7 @@
   <head>
     <title>Dijkstra's Algorithm Proficiency Exercise</title>
     <meta charset="utf-8" />
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
@@ -49,6 +50,7 @@
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="graphUtils.js"></script>
+    <script src="DijkstraPE-research-generator-ugly.js"></script>
     <script src="../../lib/jsav-exercise-recorder-bundle.js"></script>
     <script src="DijkstraPE-research.js"></script>
   </body>
