--- a/AV/Development/graphDFSPE.html
+++ b/AV/Development/graphDFSPE.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
      <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-    <link rel="stylesheet" href="graphDFSPE.css" />
+    <link rel="stylesheet" href="GraphAlgorithms.css" />
   </head>
   <body>
     <div id="container">
