--- a/AV/Development/graphBFSPE.html
+++ b/AV/Development/graphBFSPE.html
@@ -6,7 +6,7 @@
     <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-    <link rel="stylesheet" href="graphBFSPE.css" />
+    <link rel="stylesheet" href="GraphAlgorithms.css" />
   </head>
   <body>
     <div id="container">
