--- a/AV/Development/DijkstraPE-research-v3.html
+++ b/AV/Development/DijkstraPE-research-v3.html
@@ -45,6 +45,7 @@
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="graphUtils.js"></script>
     <script src="../../lib/jsav-exercise-recorder-bundle.js"></script>
+    <script src="GraphAlgorithms.js"></script>
     <script src="PqOperationSequence.js"></script>
     <script src="DijkstraInstanceGenerator-ugly.js"></script>
     <script src="DijkstraPE-research-v3.js"></script>
