Scaffolded Prim: Use legend code from Dijkstra
Issue #215
- convert Scaffolded Prim to use the new legend code
This fulfils the issue.

--- a/AV/Development/PrimAVPE-scaffolded-v2.html
+++ b/AV/Development/PrimAVPE-scaffolded-v2.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
+    <link rel="stylesheet" href="GraphAlgorithms.css" />
     <link rel="stylesheet" href="PrimAVPE-scaffolded-v2.css" />
   </head>
   <body>
@@ -44,6 +45,7 @@
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="graphUtils.js"></script>
+    <script src="GraphAlgorithms.js"></script>
     <script src="../../lib/jsav-exercise-recorder-bundle.js"></script>
     <script src="PqOperationSequence.js"></script>
     <script src="PrimAVPE-scaffolded-v2.js"></script>
