--- a/AV/Development/DijkstraPE-research-v3.html
+++ b/AV/Development/DijkstraPE-research-v3.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
+    <link rel="stylesheet" href="GraphAlgorithms.css" />
     <link rel="stylesheet" href="DijkstraPE-research-v3.css" />
   </head>
   <body>
