--- a/AV/Development/PrimAVPE.html
+++ b/AV/Development/PrimAVPE.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
-    <link rel="stylesheet" href="PrimAVPE.css" />
+    <link rel="stylesheet" href="GraphAlgorithms.css" type="text/css" />
+    <link rel="stylesheet" href="PrimAVPE.css" type="text/css" />
   </head>
   <body>
     <div id="container">
