--- a/AV/Development/graphBFSPE.html
+++ b/AV/Development/graphBFSPE.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
     <link rel="stylesheet" href="GraphAlgorithms.css" />
+    <link rel="stylesheet" href="graphBFSPE.css" />
   </head>
   <body>
     <div id="container">
