--- a/AV/Development/KruskalPE.html
+++ b/AV/Development/KruskalPE.html
@@ -3,8 +3,10 @@
   <head>
     <title>Kruskal's Algorithm Proficiency Exercise</title>
     <meta charset="utf-8" />
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+    <link rel="stylesheet" href="GraphAlgorithms.css" />
     <link rel="stylesheet" href="KruskalPE.css" />
   </head>
   <body>
