--- a/AV/Development/PrimAVPE-scaffolded-v2.html
+++ b/AV/Development/PrimAVPE-scaffolded-v2.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dijkstra's Algorithm Proficiency Exercise</title>
+    <title>Prim's Algorithm Proficiency Exercise</title>
     <meta charset="utf-8" />
     <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
     <link rel="stylesheet" href="GraphAlgorithms.css" />
-    <link rel="stylesheet" href="DijkstraPE-research-v3.css" />
+    <link rel="stylesheet" href="PrimAVPE-scaffolded-v2.css" />
   </head>
   <body>
     <div id="container">
@@ -45,10 +45,9 @@
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="graphUtils.js"></script>
-    <script src="../../lib/jsav-exercise-recorder-bundle.js"></script>
     <script src="GraphAlgorithms.js"></script>
+    <script src="../../lib/jsav-exercise-recorder-bundle.js"></script>
     <script src="PqOperationSequence.js"></script>
-    <script src="DijkstraInstanceGenerator-ugly.js"></script>
-    <script src="DijkstraPE-research-v3.js"></script>
+    <script src="PrimAVPE-scaffolded-v2.js"></script>
   </body>
 </html>
