--- a/AV/Development/graphDFSPE.html
+++ b/AV/Development/graphDFSPE.html
@@ -3,8 +3,9 @@
   <head>
     <title>Depth First Search Algorithm Proficiency Exercise</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+    <link rel="stylesheet" href="GraphAlgorithms.css" />
     <link rel="stylesheet" href="graphDFSPE.css" />
   </head>
   <body>
