JSAV demo page updated

--- a/AV/new-exercises.html
+++ b/AV/new-exercises.html
@@ -32,10 +32,10 @@
         <li>Pseudocode inside exercise</li>
     </ul>
 
-    <iframe src="Development/graphDFSPE.html" width="1000" height="620">
+    <iframe src="Development/graphDFSPE.html" width="912" height="612">
     </iframe>
 
-    <iframe src="Development/graphBFSPE.html" width="1000" height="620">
+    <iframe src="Development/graphBFSPE.html" width="1012" height="712">
     </iframe>
 
     <h2>Kruskal's algorithm</h2>
@@ -46,7 +46,7 @@
         <li>Uniform color scheme with DFS &amp; BFS</li>
     </ul>
 
-    <iframe src="Development/KruskalPE.html" width="850" height="650">
+    <iframe src="Development/KruskalPE.html" width="1012" height="712">
     </iframe>
 
     <h2>Scaffolded Prim's algorithm</h2>
@@ -57,7 +57,7 @@
         <li>Model answer highlights comparison operations</li>
     </ul>
 
-    <iframe src="Development/PrimAVPE-scaffolded.html" width="1000" height="1000">
+    <iframe src="Development/PrimAVPE-scaffolded-v2.html" width="1012" height="962">
     </iframe>
 
     <h2>Non-Scaffolded Prim's algorithm</h2>
@@ -67,10 +67,10 @@
         <li>Student clicks an edge to add it to the spanning tree</li>
     </ul>
 
-    <iframe src="Development/PrimAVPE.html" width="1400" height="700">
+    <iframe src="Development/PrimAVPE.html" width="1112" height="712">
     </iframe>
 
-    <h2>Scaffolded Dijkstra's algorithm v1</h2>
+    <h2>Scaffolded Dijkstra's algorithm (version 3)</h2>
 
     <ul>
         <li>Used at autumn 2022 experiment</li>
@@ -87,18 +87,7 @@
         <li>Most recently dequeued vertex is highlighted</li>
     </ul>
 
-    <iframe src="Development/DijkstraPE-research-v2.html" width="1000" height="1000">
-    </iframe>
-
-    <h2>Scaffolded Dijkstra's algorithm v2</h2>
-
-    <ul>
-        <li>Will be used at autumn 2023</li>
-        <li>Similar to Scaffolded Dijkstra's algorithm v1</li>
-        <li>Both vertices and edges are colored according to algorithmic concepts</li>
-    </ul>
-
-    <iframe src="Development/DijkstraPE-research-v3.html" width="1000" height="1000">
+    <iframe src="Development/DijkstraPE-research-v3.html" width="912" height="962">
     </iframe>
 
 
@@ -110,7 +99,7 @@
         <li>Hard to do without pen and paper notes</li>
     </ul>
 
-    <iframe src="Development/DijkstraPE-research.html" width="1400" height="800">
+    <iframe src="Development/DijkstraPE-research.html" width="1312" height="712">
     </iframe>
 
 
