Feature: add adjacency list representation of the graph to BFS and DFS (#260)
* Autoformat BFS

* Remove old init function from BFS

* Add neighbour list placeholder to BFS html

* Refactor createLegend

* Implement function to create neighbour list

* Add neigbour list to BFS exercise

Related to #211

* Add possibility to clear neighbour list on reset

* Update BFS instructions mention neighbour list

* Remove old init function from DFS

* Format DFS exercise

* Add adjacency list representation of graph to DFS

* Rename neighbour list to adjacency list

* Spelling fix

---------

Co-authored-by: Artturi Tilanterä <artturi.tilantera@aalto.fi>

--- a/AV/Development/graphDFSPE.html
+++ b/AV/Development/graphDFSPE.html
@@ -30,8 +30,11 @@
         <!-- This class of codeblock with child of class code are used to float
         the pseudocode to the left side of the screen. The inner class code is
         needed, as JSAV can only append to something, not add inside :) -->
-        <div class="codeblock" style="float: left;">
+        <div class="codeblock">
           <div class="code"> </div>
+        </div>
+        <div class="neighbourlistblock">
+          <div class="neighbourlist"> </div>
         </div>
         <div class="jsavcanvas">
           <p id="procontrols">
@@ -45,7 +48,7 @@
     <script src="../../JSAV/lib/jquery.transit.js"></script>
     <script src="../../JSAV/lib/raphael.js"></script>
     <script src="../../JSAV/build/JSAV-min.js"></script>
-    <script src="../../DataStructures/binaryheap.js"></script>
+    <script src="./GraphAlgorithms.js"></script>
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="graphUtils.js"></script>
