Refactor: Extract functions of BFS and DFS to builder class (#265)
* Move logic for creating BFS exercise functions to builder class

* Utilize exercise builder class in DFS

* Add docstrings for TraversalExerciseBuilder class

* Remove unnecessary variable declarations

--- a/AV/Development/graphBFSPE.html
+++ b/AV/Development/graphBFSPE.html
@@ -53,6 +53,7 @@
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="graphUtils.js"></script>
     <script src="GraphAlgorithms.js"></script>
+    <script src="GraphTraversal.js"></script>
     <script src="graphBFSPE.js"></script>
   </body>
 </html>
