--- a/AV/Development/graphDFSPE.html
+++ b/AV/Development/graphDFSPE.html
@@ -52,6 +52,7 @@
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="graphUtils.js"></script>
+    <script src="GraphTraversal.js"></script>
     <script src="graphDFSPE.js"></script>
   </body>
 </html>
