--- a/AV/Development/DijkstraPE-research.html
+++ b/AV/Development/DijkstraPE-research.html
@@ -29,12 +29,6 @@
       <form class="avcontainer">
         <p class="instructLabel"></p>
         <p class="instructions"></p>
-        <!-- This class of codeblock with child of class code are used to float
-        the pseudocode to the left side of the screen. The inner class code is
-        needed, as JSAV can only append to something, not add inside :) -->
-        <div class="codeblock" style="float: left;">
-          <div class="code"> </div>
-        </div>
         <div class="jsavcanvas">
           <p id="procontrols">
             <span class="jsavscore"></span>
@@ -51,6 +45,7 @@
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="graphUtils.js"></script>
+    <script src="GraphAlgorithms.js"></script>
     <script src="DijkstraPE-research-generator-ugly.js"></script>
     <script src="../../lib/jsav-exercise-recorder-bundle.js"></script>
     <script src="DijkstraPE-research.js"></script>
