--- a/AV/Development/graphBFSPE.html
+++ b/AV/Development/graphBFSPE.html
@@ -51,6 +51,7 @@
     <script src="../../JSAV/build/JSAV-min.js"></script>
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
+    <script src="../../DataStructures/LinkedQueue.js"></script>
     <script src="graphUtils.js"></script>
     <script src="GraphAlgorithms.js"></script>
     <script src="GraphTraversal.js"></script>
