Kruskal: ensure connected graph and add legend (#285)
* Ensure the graph is connected in Kruskal exercise

* Change "Edge" to just "E" in the edge list header

This makes it compatible with both Finnish and English language versions
of the exercise.

* Mention E in the Kruskal exercise instructions

* Adjust the position of edge list in the model solution

* Mention that w stands for weight in the exercise instruction

* Move edge list a bit down

Finnish instructions now take one more line so this keeps some space
between the edge list and instructions.

* Add Teemu to Kruskal authors

* Add legend to Kruskal GUI and tighten the layout

There was quite a lot of unused space around the graph.

Related to issue #214

* Add legend to Kruskal model and make model box width constant

Related to issue #214

* Proofreading Kruskal exercise instructions

Pull request !285

---------

Co-authored-by: Artturi Tilanterä <artturi.tilantera@aalto.fi>

--- a/AV/Development/KruskalPE.html
+++ b/AV/Development/KruskalPE.html
@@ -43,6 +43,7 @@
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="graphUtils.js"></script>
+    <script src="GraphAlgorithms.js"></script>
     <script src="KruskalPE.js"></script>
   </body>
 </html>
