--- a/AV/Development/KruskalPE.html
+++ b/AV/Development/KruskalPE.html
@@ -40,10 +40,10 @@
     <script src="../../JSAV/lib/jquery.transit.js"></script>
     <script src="../../JSAV/lib/raphael.js"></script>
     <script src="../../JSAV/build/JSAV-min.js"></script>
-    <script src="../../DataStructures/binaryheap.js"></script>
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="graphUtils.js"></script>
+    <script src="GraphAlgorithms.js"></script>
     <script src="KruskalPE.js"></script>
   </body>
 </html>
